k8s/services/frontend.yml
kind: Service
apiVersion: v1
metadata:
  name: pwa-frontend
spec:
  selector:
    app: MyApp
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
